k8s/ingress-rules/templates/external_services.yaml
kind: Service
apiVersion: v1
metadata:
  name: drone
spec:
  type: ExternalName
  externalName: drone-server-service.drone-ci.svc.cluster.local
  ports:
  - port: 80
---
kind: Service
apiVersion: v1
metadata:
  name: grafana
spec:
  type: ExternalName
  externalName: loki-grafana.monitoring.svc.cluster.local
  ports:
  - port: 80
---
kind: Service
apiVersion: v1
metadata:
  name: gitea
spec:
  type: ExternalName
  externalName: gitea-http.gitea.svc.cluster.local
  ports:
  - port: 80
    targetPort: 3000
