k8s/ingress-rules/templates/ingress_rules.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - drone-darklab.dedyn.io
    - gitea-darklab.dedyn.io
    - grafana-darklab.dedyn.io
    - darklab.dedyn.io
    secretName: ingress-certs-prod
  rules:
  - host: drone-darklab.dedyn.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drone
            port:
              number: 80
  - host: gitea-darklab.dedyn.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea
            port:
              number: 80
  - host: grafana-darklab.dedyn.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
  - host: darklab.dedyn.io
    http:
      paths:
      - path: /echo1
        pathType: Prefix
        backend:
          service:
            name: echo1
            port:
              number: 80
